input height fixed on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -200,6 +200,6 @@
 
   .input {
     max-width: 200px;
-    padding: 18px;
+    font-size: 18px;
   }
 }
